# mleroc

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pylintrc  pylock.toml  pyproject.toml  requirements.txt  unbalance.py
mleroc/: estimators.py  roc.py  unbalance.py
src/config/: __init__.py  config.py  config.toml.template
src/mleroc/: c_values_for_estimators.py  config.py  estimators.py  roc.py  tail_estimation.py  unbalance.py
tests/: test_mle.py
