[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mleroc"
version = "0.1.0"
description = "mleroc (pronounced melee rock) is an ML estimator of optimal ROC curves"
authors = [{ name = "Xiaohan Kang", email = "veggente@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
]
