[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mleroc"
version = "0.1.0"
description = "mleroc (pronounced melee rock) is an ML estimator of optimal ROC curves"
authors = [
    { name = "Xiaohan Kang", email = "veggente@gmail.com" },
    { name = "Bruce Hajek", email = "b-hajek@illinois.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=1.16.6",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
]

[tool.isort]
profile = "black"
force_single_line = true
